--- a/Login.html
+++ b/Login.html
@@ -7,11 +7,25 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 		crossorigin="anonymous">
-	<title>Document</title>
+		<link rel="style" type= "text/css" href="style.css">
+	<title>Login</title>
 </head>
 
 <body>
-
+	<div class="container-fluid">	
+		<h1>Login</h1>
+		<form>
+			
+			<div class="form-group">
+				<input class="form-control" type="text" placeholder="username">
+			</div>
+			<div class="form-group">
+				<input class="form-control" type="password" placeholder="password">
+			</div>
+			<button class="btn btn-primary btn-block">Login</button>
+			<button class="btn btn-seconday btn-block">Registar</button>
+		</form>
+</div>	
 </body>
 
 </html>
