--- a/User/Login.html
+++ b/User/Login.html
@@ -10,7 +10,11 @@
 		<link rel="style" type= "text/css" href="style.css">
 	<title>Login</title>
 </head>
-
+<!--Line spacing to center the page-->
+<br>
+<br>
+<br>
+<br>
 <body>
 	<div class="container-fluid">	
 		<h1>Login</h1>
@@ -22,8 +26,8 @@
 			<div class="form-group">
 				<input class="form-control" type="password" placeholder="password">
 			</div>
-			<button class="btn btn-primary btn-block">Login</button>
-			<button class="btn btn-seconday btn-block">Registar</button>
+			<a href="Profile.html" class="btn btn-primary btn-block">Login</a>
+			<a href="Register.html" class="btn btn-dark btn-block">Register</a>
 		</form>
 </div>	
 </body>
