--- a/User/Register.html
+++ b/User/Register.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
 		crossorigin="anonymous">
         <link rel="style" type= "text/css" href="style.css">
-        <title>Registar</title>
+        <title>Register</title>
 </head>
 <body>
     <div class="container-fluid">
-        <h1>Registar</h1>
+        <h1>Register</h1>
         <form>
             <div class="form-group">
                 <input class="form-control" type="text" placeholder="username">
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <input class="form-control" type="password" placeholder="verify passsword"> 
             </div>
-            <button class="btn btn-primary btn-block">Registar</button>
+            <button class="btn btn-primary btn-block">Register</button>
             <button class="btn btn-danger btn-block">Cancel</button>
         </form>
     </div>
