--- a/Website/Website-list.html
+++ b/Website/Website-list.html
@@ -29,18 +29,18 @@
         <ul class="list-group">
             <li class="list-group-item">
                 <a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></a></i>
-                <a href="#">Address Book App</a>
+                <a href="../Page/Page-list.html">Address Book App</a>
             </li>
             <li class="list-group-item">
                 <a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></i></a>
-                <a href="#">Blogger</a>
+                <a href="../Page/Page-list.html">Blogger</a>
             </li>
             <li class="list-group-item">
                 <a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></i></a>
-                <a href="#">Blogging App</a>
+                <a href="../Page/Page-list.html">Blogging App</a>
             </li>
             <li class="list-group-item"><a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></i></a>
-                <a href="#">Script Testing App</a>
+                <a href="../Page/Page-list.html">Script Testing App</a>
             </li>
         </ul>
     </div>
