--- a/Website/Website-new.html
+++ b/Website/Website-new.html
@@ -45,19 +45,19 @@
            <div class="container-fluid">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></a></i>
-                        <a href="#">Address Book App</a>
+                        <a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></a></i>
+                        <a href="../Page/Page-list.html">Address Book App</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Blogger</a>
+                        <a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Blogger</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Blogging App</a>
+                        <a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Blogging App</a>
                     </li>
-                    <li class="list-group-item"><a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Script Testing App</a>
+                    <li class="list-group-item"><a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Script Testing App</a>
                     </li>
                 </ul>
             </div>
