--- a/User/Profile.html
+++ b/User/Profile.html
@@ -14,7 +14,7 @@
         <title>Document</title>
     </head>
     <body>
-        <!--Navbard-->
+        <!--Navbar-->
         <nav class="navbar navbar-dark bg-dark fixed-top">
                 <a class="navbar-brand" href="#"><b>Profile</b></a>
             <!--Check-->
@@ -56,7 +56,7 @@
         <!--Footer-->
         <nav class="navbar navbar-dark bg-dark fixed-bottom">              <!--Check-->
             <div class="full-width">
-                <a class="color-white float-right" href="#"><i class="fas fa-user"></i></a> 
+                <a class="color-white float-right" href="../User/Profile.html"><i class="fas fa-user"></i></a> 
             </div> 
         </nav>
     </body>
