--- a/Website/Website-edit.html
+++ b/Website/Website-edit.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Edit Website</title>
+   <!--Bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
     <!--FontAwesome-->
@@ -45,19 +46,19 @@
            <div class="container-fluid">
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></a></i>
-                        <a href="#">Address Book App</a>
+                        <a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></a></i>
+                        <a href="../Page/Page-list.html">Address Book App</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Blogger</a>
+                        <a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Blogger</a>
                     </li>
                     <li class="list-group-item">
-                        <a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Blogging App</a>
+                        <a class="float-right" href="../Website/Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Blogging App</a>
                     </li>
-                    <li class="list-group-item"><a class="float-right" href="#"><i class="fas fa-cogs"></i></a>
-                        <a href="#">Script Testing App</a>
+                    <li class="list-group-item"><a class="float-right" href="Website-edit.html"><i class="fas fa-cogs"></i></a>
+                        <a href="../Page/Page-list.html">Script Testing App</a>
                     </li>
                 </ul>
             </div>
